# helloFlask

./: README.md  pyproject.toml
project/: pyproject.toml
project/project/: project.py
project/project/static/css/: form.css  gagne.css  main.css
project/project/templates/: Non.html  Sbradarajan.html  about.html  form.html  home.html  index.html
